Adding readme.md, adding stuff to .gitignore and some other project settings.

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,27 @@
 node_modules/
 platforms/
 plugins/
+
+.DS_Store
+node_modules
+*.sw[mnpcod]
+*.log
+*.tmp
+*.tmp.*
+log.txt
+example/cordova/iOS/www/js/framework
+
+example/cordova/iOS/www/js/framework
+.sass-cache/
+framework.sublime-project
+
+framework.sublime-workspace
+UserInterfaceState.xcuserstate
+
+bower_components/
+components/
+tmp
+temp
+dist
+
+.idea
